@@ -1,3 +1,11 @@
+2009-03-14  Marek Habersack  <mhabersack@novell.com>
+
+	* mod_mono.c (ensure_dashboard_initialized): takes an argument
+	which tells it whether it's called as part of the XXGLOBAL (auto
+	app) server and, if yes, turns off the dashboard attachment
+	critical error which in this case is a false alarm. Fixes bug
+	#476289
+
 2009-03-08  Marek Habersack  <mhabersack@novell.com>
 
 	* mod_mono.c (send_entire_file): attempts to map file name using
